--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Owl Hub</title>
+        <title>Wrath.xyz Hub</title>
 
         <meta charset = "utf-8">
 		<link rel = "shortcut icon" type = "image/x-icon" href="Logo.ico" />
 
-		<meta name = "author" content = "Owl Hub" />
-		<meta name = "description" content = "Owl Hub" />
-		<meta name = "keywords" content = "Owl, Hub, OwlHub, script, lua, krnl" />
+		<meta name = "author" content = "Wrath.xyz" />
+		<meta name = "description" content = "Wrath.xyz" />
+		<meta name = "keywords" content = "Wrath.xyz, Hub, OwlHub, script, lua, krnl" />
 
-		<meta property = "og:title" content = "Owl Hub" />
-		<meta property = "og:description" content = "Official website for Owl Hub" />
+		<meta property = "og:title" content = "Wrath.xyz" />
+		<meta property = "og:description" content = "Official discord for Wrath.xyz" />
 		<meta property = "og:type" content = "website" />
 		<meta property = "og:url" content = "https://owlhub.ga" />
 		<meta property = "og:secure_url" content = "https://owlhub.ga">
